Add properties to Second-Class

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: #FFC0CB;
     font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
+
+#First-ID {
+    color: rgb(0,0,255);
+    font-size: 36px;
+}
