--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -7,3 +7,9 @@
     color: rgb(0,0,255);
     font-size: 36px;
 }
+
+.Second-Class {
+    background-color: #FFC0CB;
+    font-family: "Verdana", "DejaVu Sans", sans-serif;
+    font-size: 24px;
+}
