Fix properties in Second-ID

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -15,7 +15,7 @@
 }
 
 #Second-ID{
-    color: hsl(120, 73, 75);
+    background-color: hsl(120, 73, 75);
     font-size: 24px;
     font-weight: 700;
 }
