--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -3,7 +3,7 @@
     font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
 
-#First-ID {
+#two {
     color: rgb(0,0,255);
     font-size: 36px;
 }
@@ -12,13 +12,7 @@
     font-size: 24px;
 }
 
-#Second-ID{
+#four{
     background-color: hsl(120, 100%, 75%);
-    font-size: 24px;
     font-weight: 700;
-}
-
-.Third-Class {
-    background-color: #FFC0CB;
-    font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
