--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -6,7 +6,8 @@
     background-color:yellow;
 }
 
-.both{
+.first,
+.second {
     font-size: 28px;
     font-family: "Helvetica", "Times New Roman", sans-serif;
 }
